--- a/day19/echarts_file/line_base（折线图）.html
+++ b/day19/echarts_file/line_base（折线图）.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
-                <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
+            <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
 
-    
 </head>
-<body >
-    <div id="015c11f8487542c5a86144e71dcd03aa" class="chart-container" style="width:900px; height:500px; "></div>
+<body>
+    <div id="3b7cb74f5d88457ab0d41e4c50fd8db3" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_015c11f8487542c5a86144e71dcd03aa = echarts.init(
-            document.getElementById('015c11f8487542c5a86144e71dcd03aa'), 'white', {renderer: 'canvas', locale: 'ZH'});
-        var option_015c11f8487542c5a86144e71dcd03aa = {
+        var chart_3b7cb74f5d88457ab0d41e4c50fd8db3 = echarts.init(
+            document.getElementById('3b7cb74f5d88457ab0d41e4c50fd8db3'), 'white', {renderer: 'canvas'});
+        var option_3b7cb74f5d88457ab0d41e4c50fd8db3 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -21,70 +20,78 @@
     "animationDurationUpdate": 300,
     "animationEasingUpdate": "cubicOut",
     "animationDelayUpdate": 0,
-    "aria": {
-        "enabled": false
-    },
     "color": [
-        "#5470c6",
-        "#91cc75",
-        "#fac858",
-        "#ee6666",
-        "#73c0de",
-        "#3ba272",
-        "#fc8452",
-        "#9a60b4",
-        "#ea7ccc"
+        "#c23531",
+        "#2f4554",
+        "#61a0a8",
+        "#d48265",
+        "#749f83",
+        "#ca8622",
+        "#bda29a",
+        "#6e7074",
+        "#546570",
+        "#c4ccd3",
+        "#f05b72",
+        "#ef5b9c",
+        "#f47920",
+        "#905a3d",
+        "#fab27b",
+        "#2a5caa",
+        "#444693",
+        "#726930",
+        "#b2d235",
+        "#6d8346",
+        "#ac6767",
+        "#1d953f",
+        "#6950a1",
+        "#918597"
     ],
     "series": [
         {
             "type": "line",
             "name": "\u5546\u5bb6A",
             "connectNulls": false,
-            "xAxisIndex": 0,
             "symbolSize": 4,
             "showSymbol": true,
             "smooth": false,
             "clip": true,
             "step": false,
-            "stackStrategy": "samesign",
             "data": [
                 [
-                    "\u6cb3\u9a6c",
-                    115
+                    "\u886c\u886b",
+                    62
                 ],
                 [
-                    "\u87d2\u86c7",
-                    135
+                    "\u6bdb\u8863",
+                    25
                 ],
                 [
-                    "\u8001\u864e",
+                    "\u9886\u5e26",
+                    142
+                ],
+                [
+                    "\u88e4\u5b50",
                     86
                 ],
                 [
-                    "\u5927\u8c61",
-                    31
+                    "\u98ce\u8863",
+                    107
                 ],
                 [
-                    "\u5154\u5b50",
-                    127
+                    "\u9ad8\u8ddf\u978b",
+                    150
                 ],
                 [
-                    "\u718a\u732b",
-                    127
-                ],
-                [
-                    "\u72ee\u5b50",
-                    98
+                    "\u889c\u5b50",
+                    23
                 ]
             ],
             "hoverAnimation": true,
             "label": {
                 "show": true,
-                "margin": 8,
-                "valueAnimation": false
+                "position": "top",
+                "margin": 8
             },
-            "logBase": 10,
-            "seriesLayoutBy": "column",
             "lineStyle": {
                 "show": true,
                 "width": 1,
@@ -102,51 +109,47 @@
             "type": "line",
             "name": "\u5546\u5bb6B",
             "connectNulls": false,
-            "xAxisIndex": 0,
             "symbolSize": 4,
             "showSymbol": true,
             "smooth": false,
             "clip": true,
             "step": false,
-            "stackStrategy": "samesign",
             "data": [
                 [
-                    "\u6cb3\u9a6c",
-                    96
+                    "\u886c\u886b",
+                    53
                 ],
                 [
-                    "\u87d2\u86c7",
-                    134
+                    "\u6bdb\u8863",
+                    78
                 ],
                 [
-                    "\u8001\u864e",
+                    "\u9886\u5e26",
+                    115
+                ],
+                [
+                    "\u88e4\u5b50",
                     79
                 ],
                 [
-                    "\u5927\u8c61",
-                    64
+                    "\u98ce\u8863",
+                    145
                 ],
                 [
-                    "\u5154\u5b50",
-                    130
+                    "\u9ad8\u8ddf\u978b",
+                    57
                 ],
                 [
-                    "\u718a\u732b",
-                    45
-                ],
-                [
-                    "\u72ee\u5b50",
-                    72
+                    "\u889c\u5b50",
+                    32
                 ]
             ],
             "hoverAnimation": true,
             "label": {
                 "show": true,
-                "margin": 8,
-                "valueAnimation": false
+                "position": "top",
+                "margin": 8
             },
-            "logBase": 10,
-            "seriesLayoutBy": "column",
             "lineStyle": {
                 "show": true,
                 "width": 1,
@@ -167,26 +170,15 @@
                 "\u5546\u5bb6A",
                 "\u5546\u5bb6B"
             ],
-            "selected": {},
+            "selected": {
+                "\u5546\u5bb6A": true,
+                "\u5546\u5bb6B": true
+            },
             "show": true,
             "padding": 5,
             "itemGap": 10,
             "itemWidth": 25,
-            "itemHeight": 14,
-            "backgroundColor": "transparent",
-            "borderColor": "#ccc",
-            "borderRadius": 0,
-            "pageButtonItemGap": 5,
-            "pageButtonPosition": "end",
-            "pageFormatter": "{current}/{total}",
-            "pageIconColor": "#2f4554",
-            "pageIconInactiveColor": "#aaa",
-            "pageIconSize": 15,
-            "animationDurationUpdate": 800,
-            "selector": false,
-            "selectorPosition": "auto",
-            "selectorItemGap": 7,
-            "selectorButtonGap": 10
+            "itemHeight": 14
         }
     ],
     "tooltip": {
@@ -200,16 +192,11 @@
         "alwaysShowContent": false,
         "showDelay": 0,
         "hideDelay": 100,
-        "enterable": false,
-        "confine": false,
-        "appendToBody": false,
-        "transitionDuration": 0.4,
         "textStyle": {
             "fontSize": 14
         },
         "borderWidth": 0,
-        "padding": 5,
-        "order": "seriesAsc"
+        "padding": 5
     },
     "xAxis": [
         {
@@ -217,12 +204,13 @@
             "scale": false,
             "nameLocation": "end",
             "nameGap": 15,
+            "gridIndex": 0,
             "inverse": false,
             "offset": 0,
             "splitNumber": 5,
             "minInterval": 0,
             "splitLine": {
-                "show": true,
+                "show": false,
                 "lineStyle": {
                     "show": true,
                     "width": 1,
@@ -231,22 +219,14 @@
                     "type": "solid"
                 }
             },
-            "animation": true,
-            "animationThreshold": 2000,
-            "animationDuration": 1000,
-            "animationEasing": "cubicOut",
-            "animationDelay": 0,
-            "animationDurationUpdate": 300,
-            "animationEasingUpdate": "cubicOut",
-            "animationDelayUpdate": 0,
             "data": [
-                "\u6cb3\u9a6c",
-                "\u87d2\u86c7",
-                "\u8001\u864e",
-                "\u5927\u8c61",
-                "\u5154\u5b50",
-                "\u718a\u732b",
-                "\u72ee\u5b50"
+                "\u886c\u886b",
+                "\u6bdb\u8863",
+                "\u9886\u5e26",
+                "\u88e4\u5b50",
+                "\u98ce\u8863",
+                "\u9ad8\u8ddf\u978b",
+                "\u889c\u5b50"
             ]
         }
     ],
@@ -256,12 +236,13 @@
             "scale": false,
             "nameLocation": "end",
             "nameGap": 15,
+            "gridIndex": 0,
             "inverse": false,
             "offset": 0,
             "splitNumber": 5,
             "minInterval": 0,
             "splitLine": {
-                "show": true,
+                "show": false,
                 "lineStyle": {
                     "show": true,
                     "width": 1,
@@ -269,32 +250,18 @@
                     "curveness": 0,
                     "type": "solid"
                 }
-            },
-            "animation": true,
-            "animationThreshold": 2000,
-            "animationDuration": 1000,
-            "animationEasing": "cubicOut",
-            "animationDelay": 0,
-            "animationDurationUpdate": 300,
-            "animationEasingUpdate": "cubicOut",
-            "animationDelayUpdate": 0
+            }
         }
     ],
     "title": [
         {
-            "show": true,
             "text": "Line-\u57fa\u672c\u793a\u4f8b",
-            "target": "blank",
-            "subtarget": "blank",
             "padding": 5,
-            "itemGap": 10,
-            "textAlign": "auto",
-            "textVerticalAlign": "auto",
-            "triggerEvent": false
+            "itemGap": 10
         }
     ]
 };
-        chart_015c11f8487542c5a86144e71dcd03aa.setOption(option_015c11f8487542c5a86144e71dcd03aa);
+        chart_3b7cb74f5d88457ab0d41e4c50fd8db3.setOption(option_3b7cb74f5d88457ab0d41e4c50fd8db3);
     </script>
 </body>
 </html>
