pyecharts测试数据优化

--- a/day19/echarts_file/chryl_test_line.html
+++ b/day19/echarts_file/chryl_test_line.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="bce2991a2c3742858c66631e36dd6ea4" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="3f17fa2759644990bd99a6ca585c4e02" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_bce2991a2c3742858c66631e36dd6ea4 = echarts.init(
-            document.getElementById('bce2991a2c3742858c66631e36dd6ea4'), 'white', {renderer: 'canvas'});
-        var option_bce2991a2c3742858c66631e36dd6ea4 = {
+        var chart_3f17fa2759644990bd99a6ca585c4e02 = echarts.init(
+            document.getElementById('3f17fa2759644990bd99a6ca585c4e02'), 'white', {renderer: 'canvas'});
+        var option_3f17fa2759644990bd99a6ca585c4e02 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -104,15 +104,135 @@
             },
             "zlevel": 0,
             "z": 0
+        },
+        {
+            "type": "line",
+            "name": "\u5546\u5bb6B",
+            "connectNulls": false,
+            "symbolSize": 4,
+            "showSymbol": true,
+            "smooth": false,
+            "clip": true,
+            "step": false,
+            "data": [
+                [
+                    "\u5468\u4e00",
+                    220
+                ],
+                [
+                    "\u5468\u4e8c",
+                    532
+                ],
+                [
+                    "\u5468\u4e09",
+                    501
+                ],
+                [
+                    "\u5468\u56db",
+                    934
+                ],
+                [
+                    "\u5468\u4e94",
+                    6290
+                ],
+                [
+                    "\u5468\u516d",
+                    1130
+                ],
+                [
+                    "\u5468\u65e5",
+                    1620
+                ]
+            ],
+            "hoverAnimation": true,
+            "label": {
+                "show": false,
+                "position": "top",
+                "margin": 8
+            },
+            "lineStyle": {
+                "show": true,
+                "width": 1,
+                "opacity": 1,
+                "curveness": 0,
+                "type": "solid"
+            },
+            "areaStyle": {
+                "opacity": 0
+            },
+            "zlevel": 0,
+            "z": 0
+        },
+        {
+            "type": "line",
+            "name": "\u5546\u5bb6C",
+            "connectNulls": false,
+            "symbolSize": 4,
+            "showSymbol": true,
+            "smooth": false,
+            "clip": true,
+            "step": false,
+            "data": [
+                [
+                    "\u5468\u4e00",
+                    520
+                ],
+                [
+                    "\u5468\u4e8c",
+                    332
+                ],
+                [
+                    "\u5468\u4e09",
+                    201
+                ],
+                [
+                    "\u5468\u56db",
+                    134
+                ],
+                [
+                    "\u5468\u4e94",
+                    9290
+                ],
+                [
+                    "\u5468\u516d",
+                    1230
+                ],
+                [
+                    "\u5468\u65e5",
+                    820
+                ]
+            ],
+            "hoverAnimation": true,
+            "label": {
+                "show": false,
+                "position": "top",
+                "margin": 8
+            },
+            "lineStyle": {
+                "show": true,
+                "width": 1,
+                "opacity": 1,
+                "curveness": 0,
+                "type": "solid"
+            },
+            "areaStyle": {
+                "opacity": 0
+            },
+            "zlevel": 0,
+            "z": 0
         }
     ],
     "legend": [
         {
             "data": [
-                "\u5546\u5bb6A"
+                "\u5546\u5bb6A",
+                "\u5546\u5bb6B",
+                "\u5546\u5bb6C"
             ],
             "selected": {
-                "\u5546\u5bb6A": true
+                "\u5546\u5bb6A": true,
+                "\u5546\u5bb6B": true,
+                "\u5546\u5bb6C": true
             },
             "show": true,
             "padding": 5,
@@ -198,12 +318,14 @@
     "title": [
         {
             "text": "\u6298\u7ebf\u56fe\u793a\u4f8b",
+            "left": "center",
+            "bottom": "1%",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_bce2991a2c3742858c66631e36dd6ea4.setOption(option_bce2991a2c3742858c66631e36dd6ea4);
+        chart_3f17fa2759644990bd99a6ca585c4e02.setOption(option_3f17fa2759644990bd99a6ca585c4e02);
     </script>
 </body>
 </html>
