--- a/day19/echarts_file/pie_position（饼图）.html
+++ b/day19/echarts_file/pie_position（饼图）.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="270214ea0f974f09ad536e2adc7493f7" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="b4bd682a37d342e5ac2e740f55e7c26b" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_270214ea0f974f09ad536e2adc7493f7 = echarts.init(
-            document.getElementById('270214ea0f974f09ad536e2adc7493f7'), 'white', {renderer: 'canvas'});
-        var option_270214ea0f974f09ad536e2adc7493f7 = {
+        var chart_b4bd682a37d342e5ac2e740f55e7c26b = echarts.init(
+            document.getElementById('b4bd682a37d342e5ac2e740f55e7c26b'), 'white', {renderer: 'canvas'});
+        var option_b4bd682a37d342e5ac2e740f55e7c26b = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -49,35 +49,36 @@
     "series": [
         {
             "type": "pie",
+            "name": "\u4f60\u597d\u6211\u662f\u5927\u997c\u56fe",
             "clockwise": true,
             "data": [
                 {
-                    "name": "\u54c8\u58eb\u5947",
-                    "value": 83
+                    "name": "\u886c\u886b",
+                    "value": 112
                 },
                 {
-                    "name": "\u8428\u6469\u8036",
-                    "value": 25
+                    "name": "\u6bdb\u8863",
+                    "value": 32
                 },
                 {
-                    "name": "\u6cf0\u8fea",
-                    "value": 149
+                    "name": "\u9886\u5e26",
+                    "value": 150
                 },
                 {
-                    "name": "\u91d1\u6bdb",
-                    "value": 104
+                    "name": "\u88e4\u5b50",
+                    "value": 102
                 },
                 {
-                    "name": "\u7267\u7f8a\u72ac",
-                    "value": 95
+                    "name": "\u98ce\u8863",
+                    "value": 135
                 },
                 {
-                    "name": "\u5409\u5a03\u5a03",
-                    "value": 44
+                    "name": "\u9ad8\u8ddf\u978b",
+                    "value": 130
                 },
                 {
-                    "name": "\u67ef\u57fa",
-                    "value": 78
+                    "name": "\u889c\u5b50",
+                    "value": 106
                 }
             ],
             "radius": [
@@ -105,17 +106,17 @@
     "legend": [
         {
             "data": [
-                "\u54c8\u58eb\u5947",
-                "\u8428\u6469\u8036",
-                "\u6cf0\u8fea",
-                "\u91d1\u6bdb",
-                "\u7267\u7f8a\u72ac",
-                "\u5409\u5a03\u5a03",
-                "\u67ef\u57fa"
+                "\u886c\u886b",
+                "\u6bdb\u8863",
+                "\u9886\u5e26",
+                "\u88e4\u5b50",
+                "\u98ce\u8863",
+                "\u9ad8\u8ddf\u978b",
+                "\u889c\u5b50"
             ],
             "selected": {},
             "show": true,
-            "left": "15%",
+            "left": "20%",
             "padding": 5,
             "itemGap": 10,
             "itemWidth": 25,
@@ -141,13 +142,13 @@
     },
     "title": [
         {
-            "text": "Pie-\u8c03\u6574\u4f4d\u7f6e",
+            "text": "Pie-\u6807\u9898\u8c03\u6574\u4f4d\u7f6e",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_270214ea0f974f09ad536e2adc7493f7.setOption(option_270214ea0f974f09ad536e2adc7493f7);
+        chart_b4bd682a37d342e5ac2e740f55e7c26b.setOption(option_b4bd682a37d342e5ac2e740f55e7c26b);
     </script>
 </body>
 </html>
