--- a/day19/echarts_file/line_base（折线图）.html
+++ b/day19/echarts_file/line_base（折线图）.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="3b7cb74f5d88457ab0d41e4c50fd8db3" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="5fd1228f28fb4709a3197eaa0ad2dac7" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_3b7cb74f5d88457ab0d41e4c50fd8db3 = echarts.init(
-            document.getElementById('3b7cb74f5d88457ab0d41e4c50fd8db3'), 'white', {renderer: 'canvas'});
-        var option_3b7cb74f5d88457ab0d41e4c50fd8db3 = {
+        var chart_5fd1228f28fb4709a3197eaa0ad2dac7 = echarts.init(
+            document.getElementById('5fd1228f28fb4709a3197eaa0ad2dac7'), 'white', {renderer: 'canvas'});
+        var option_5fd1228f28fb4709a3197eaa0ad2dac7 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -58,32 +58,32 @@
             "step": false,
             "data": [
                 [
-                    "\u886c\u886b",
-                    62
+                    "\u6cb3\u9a6c",
+                    26
                 ],
                 [
-                    "\u6bdb\u8863",
-                    25
+                    "\u87d2\u86c7",
+                    120
                 ],
                 [
-                    "\u9886\u5e26",
-                    142
+                    "\u8001\u864e",
+                    120
                 ],
                 [
-                    "\u88e4\u5b50",
-                    86
+                    "\u5927\u8c61",
+                    122
                 ],
                 [
-                    "\u98ce\u8863",
-                    107
+                    "\u5154\u5b50",
+                    137
                 ],
                 [
-                    "\u9ad8\u8ddf\u978b",
-                    150
+                    "\u718a\u732b",
+                    131
                 ],
                 [
-                    "\u889c\u5b50",
-                    23
+                    "\u72ee\u5b50",
+                    57
                 ]
             ],
             "hoverAnimation": true,
@@ -116,32 +116,32 @@
             "step": false,
             "data": [
                 [
-                    "\u886c\u886b",
-                    53
+                    "\u6cb3\u9a6c",
+                    93
                 ],
                 [
-                    "\u6bdb\u8863",
-                    78
+                    "\u87d2\u86c7",
+                    94
                 ],
                 [
-                    "\u9886\u5e26",
-                    115
+                    "\u8001\u864e",
+                    130
                 ],
                 [
-                    "\u88e4\u5b50",
-                    79
+                    "\u5927\u8c61",
+                    25
                 ],
                 [
-                    "\u98ce\u8863",
-                    145
+                    "\u5154\u5b50",
+                    99
                 ],
                 [
-                    "\u9ad8\u8ddf\u978b",
-                    57
+                    "\u718a\u732b",
+                    137
                 ],
                 [
-                    "\u889c\u5b50",
-                    32
+                    "\u72ee\u5b50",
+                    37
                 ]
             ],
             "hoverAnimation": true,
@@ -200,6 +200,7 @@
     },
     "xAxis": [
         {
+            "name": "X\u8f74\u540d\u79f0",
             "show": true,
             "scale": false,
             "nameLocation": "end",
@@ -220,18 +221,19 @@
                 }
             },
             "data": [
-                "\u886c\u886b",
-                "\u6bdb\u8863",
-                "\u9886\u5e26",
-                "\u88e4\u5b50",
-                "\u98ce\u8863",
-                "\u9ad8\u8ddf\u978b",
-                "\u889c\u5b50"
+                "\u6cb3\u9a6c",
+                "\u87d2\u86c7",
+                "\u8001\u864e",
+                "\u5927\u8c61",
+                "\u5154\u5b50",
+                "\u718a\u732b",
+                "\u72ee\u5b50"
             ]
         }
     ],
     "yAxis": [
         {
+            "name": "Y\u8f74\u540d\u79f0",
             "show": true,
             "scale": false,
             "nameLocation": "end",
@@ -256,12 +258,14 @@
     "title": [
         {
             "text": "Line-\u57fa\u672c\u793a\u4f8b",
+            "left": "center",
+            "bottom": "1%",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_3b7cb74f5d88457ab0d41e4c50fd8db3.setOption(option_3b7cb74f5d88457ab0d41e4c50fd8db3);
+        chart_5fd1228f28fb4709a3197eaa0ad2dac7.setOption(option_5fd1228f28fb4709a3197eaa0ad2dac7);
     </script>
 </body>
 </html>
