--- a/day19/echarts_file/stack_bar_percent（柱状图）.html
+++ b/day19/echarts_file/stack_bar_percent（柱状图）.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
-                <script type="text/javascript" src="https://assets.pyecharts.org/assets/v5/echarts.min.js"></script>
+            <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
 
-    
 </head>
-<body >
-    <div id="0afdcb4714c342a5ae285e14e9f91bb5" class="chart-container" style="width:900px; height:500px; "></div>
+<body>
+    <div id="68b6b0f2fa8c4e03b17530a612a6da4b" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_0afdcb4714c342a5ae285e14e9f91bb5 = echarts.init(
-            document.getElementById('0afdcb4714c342a5ae285e14e9f91bb5'), 'light', {renderer: 'canvas', locale: 'ZH'});
-        var option_0afdcb4714c342a5ae285e14e9f91bb5 = {
+        var chart_68b6b0f2fa8c4e03b17530a612a6da4b = echarts.init(
+            document.getElementById('68b6b0f2fa8c4e03b17530a612a6da4b'), 'light', {renderer: 'canvas'});
+        var option_68b6b0f2fa8c4e03b17530a612a6da4b = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -21,9 +20,6 @@
     "animationDurationUpdate": 300,
     "animationEasingUpdate": "cubicOut",
     "animationDelayUpdate": 0,
-    "aria": {
-        "enabled": false
-    },
     "series": [
         {
             "type": "bar",
@@ -51,11 +47,8 @@
                     "percent": 0.4342105263157895
                 }
             ],
-            "realtimeSort": false,
             "showBackground": false,
             "stack": "stack1",
-            "stackStrategy": "samesign",
-            "cursor": "pointer",
             "barMinHeight": 0,
             "barCategoryGap": "50%",
             "barGap": "30%",
@@ -70,8 +63,7 @@
                 "show": true,
                 "position": "right",
                 "margin": 8,
-                "formatter": function(x){return Number(x.data.percent * 100).toFixed() + '%';},
-                "valueAnimation": false
+                "formatter": function(x){return Number(x.data.percent * 100).toFixed() + '%';}
             },
             "rippleEffect": {
                 "show": true,
@@ -106,11 +98,8 @@
                     "percent": 0.5657894736842105
                 }
             ],
-            "realtimeSort": false,
             "showBackground": false,
             "stack": "stack1",
-            "stackStrategy": "samesign",
-            "cursor": "pointer",
             "barMinHeight": 0,
             "barCategoryGap": "50%",
             "barGap": "30%",
@@ -125,8 +114,7 @@
                 "show": true,
                 "position": "right",
                 "margin": 8,
-                "formatter": function(x){return Number(x.data.percent * 100).toFixed() + '%';},
-                "valueAnimation": false
+                "formatter": function(x){return Number(x.data.percent * 100).toFixed() + '%';}
             },
             "rippleEffect": {
                 "show": true,
@@ -142,7 +130,10 @@
                 "\u5927\u6a21\u578bA",
                 "\u5927\u6a21\u578bB"
             ],
-            "selected": {}
+            "selected": {
+                "\u5927\u6a21\u578bA": true,
+                "\u5927\u6a21\u578bB": true
+            }
         }
     ],
     "tooltip": {
@@ -156,16 +147,11 @@
         "alwaysShowContent": false,
         "showDelay": 0,
         "hideDelay": 100,
-        "enterable": false,
-        "confine": false,
-        "appendToBody": false,
-        "transitionDuration": 0.4,
         "textStyle": {
             "fontSize": 14
         },
         "borderWidth": 0,
-        "padding": 5,
-        "order": "seriesAsc"
+        "padding": 5
     },
     "xAxis": [
         {
@@ -173,12 +159,13 @@
             "scale": false,
             "nameLocation": "end",
             "nameGap": 15,
+            "gridIndex": 0,
             "inverse": false,
             "offset": 0,
             "splitNumber": 5,
             "minInterval": 0,
             "splitLine": {
-                "show": true,
+                "show": false,
                 "lineStyle": {
                     "show": true,
                     "width": 1,
@@ -187,14 +174,6 @@
                     "type": "solid"
                 }
             },
-            "animation": true,
-            "animationThreshold": 2000,
-            "animationDuration": 1000,
-            "animationEasing": "cubicOut",
-            "animationDelay": 0,
-            "animationDurationUpdate": 300,
-            "animationEasingUpdate": "cubicOut",
-            "animationDelayUpdate": 0,
             "data": [
                 1,
                 2,
@@ -210,12 +189,13 @@
             "scale": false,
             "nameLocation": "end",
             "nameGap": 15,
+            "gridIndex": 0,
             "inverse": false,
             "offset": 0,
             "splitNumber": 5,
             "minInterval": 0,
             "splitLine": {
-                "show": true,
+                "show": false,
                 "lineStyle": {
                     "show": true,
                     "width": 1,
@@ -223,19 +203,11 @@
                     "curveness": 0,
                     "type": "solid"
                 }
-            },
-            "animation": true,
-            "animationThreshold": 2000,
-            "animationDuration": 1000,
-            "animationEasing": "cubicOut",
-            "animationDelay": 0,
-            "animationDurationUpdate": 300,
-            "animationEasingUpdate": "cubicOut",
-            "animationDelayUpdate": 0
+            }
         }
     ]
 };
-        chart_0afdcb4714c342a5ae285e14e9f91bb5.setOption(option_0afdcb4714c342a5ae285e14e9f91bb5);
+        chart_68b6b0f2fa8c4e03b17530a612a6da4b.setOption(option_68b6b0f2fa8c4e03b17530a612a6da4b);
     </script>
 </body>
 </html>
