--- a/day21/echarts_file/chryl_test_map.html
+++ b/day21/echarts_file/chryl_test_map.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="7d5f4f04c03345d79658e06479c64e6c" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="073c54ee10c4486e9dd89538215876f1" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_7d5f4f04c03345d79658e06479c64e6c = echarts.init(
-            document.getElementById('7d5f4f04c03345d79658e06479c64e6c'), 'white', {renderer: 'canvas'});
-        var option_7d5f4f04c03345d79658e06479c64e6c = {
+        var chart_073c54ee10c4486e9dd89538215876f1 = echarts.init(
+            document.getElementById('073c54ee10c4486e9dd89538215876f1'), 'white', {renderer: 'canvas'});
+        var option_073c54ee10c4486e9dd89538215876f1 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -50,7 +50,7 @@
     "series": [
         {
             "type": "map",
-            "name": "\u6d4b\u8bd5\u5730\u56fe",
+            "name": "\u6a21\u62df\u65b0\u51a0\u75ab\u60c5",
             "label": {
                 "show": true,
                 "position": "top",
@@ -59,48 +59,68 @@
             "mapType": "china",
             "data": [
                 {
-                    "name": "\u5317\u4eac",
+                    "name": "\u5317\u4eac\u5e02",
                     "value": 99
                 },
                 {
-                    "name": "\u5c71\u4e1c",
+                    "name": "\u5c71\u4e1c\u7701",
                     "value": 299
                 },
                 {
-                    "name": "\u6e56\u5357",
+                    "name": "\u6e56\u5357\u7701",
                     "value": 299
                 },
                 {
-                    "name": "\u4e0a\u6d77",
+                    "name": "\u4e0a\u6d77\u5e02",
                     "value": 199
                 },
                 {
-                    "name": "\u65b0\u7586",
+                    "name": "\u65b0\u7586\u7ef4\u543e\u5c14\u81ea\u6cbb\u533a",
                     "value": 499
                 },
                 {
-                    "name": "\u53f0\u6e7e",
+                    "name": "\u53f0\u6e7e\u7701",
                     "value": 299
                 },
                 {
-                    "name": "\u5357\u4eac",
+                    "name": "\u5357\u4eac\u5e02",
                     "value": 199
                 },
                 {
-                    "name": "\u5e7f\u4e1c",
+                    "name": "\u5e7f\u4e1c\u7701",
                     "value": 299
                 },
                 {
-                    "name": "\u5409\u6797",
-                    "value": 999
+                    "name": "\u5409\u6797\u7701",
+                    "value": 399
                 },
                 {
-                    "name": "\u9ed1\u9f99\u6c5f",
+                    "name": "\u9ed1\u9f99\u6c5f\u7701",
                     "value": 1299
                 },
                 {
-                    "name": "\u8fbd\u5b81",
-                    "value": 899
+                    "name": "\u8fbd\u5b81\u7701",
+                    "value": 499
+                },
+                {
+                    "name": "\u9752\u6d77\u7701",
+                    "value": 679
+                },
+                {
+                    "name": "\u897f\u85cf\u81ea\u6cbb\u533a",
+                    "value": 389
+                },
+                {
+                    "name": "\u91cd\u5e86\u5e02",
+                    "value": 589
+                },
+                {
+                    "name": "\u56db\u5ddd\u7701",
+                    "value": 389
+                },
+                {
+                    "name": "\u4e91\u5357\u7701",
+                    "value": 89
                 }
             ],
             "roam": true,
@@ -116,10 +136,10 @@
     "legend": [
         {
             "data": [
-                "\u6d4b\u8bd5\u5730\u56fe"
+                "\u6a21\u62df\u65b0\u51a0\u75ab\u60c5"
             ],
             "selected": {
-                "\u6d4b\u8bd5\u5730\u56fe": true
+                "\u6a21\u62df\u65b0\u51a0\u75ab\u60c5": true
             },
             "show": true,
             "padding": 5,
@@ -210,7 +230,7 @@
         ]
     }
 };
-        chart_7d5f4f04c03345d79658e06479c64e6c.setOption(option_7d5f4f04c03345d79658e06479c64e6c);
+        chart_073c54ee10c4486e9dd89538215876f1.setOption(option_073c54ee10c4486e9dd89538215876f1);
     </script>
 </body>
 </html>
