--- a/day21/echarts_file/chryl_test_map.html
+++ b/day21/echarts_file/chryl_test_map.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="073c54ee10c4486e9dd89538215876f1" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="f45e4f1e29a04a4580f14398afa78192" class="chart-container" style="width:1600px; height:700px;"></div>
     <script>
-        var chart_073c54ee10c4486e9dd89538215876f1 = echarts.init(
-            document.getElementById('073c54ee10c4486e9dd89538215876f1'), 'white', {renderer: 'canvas'});
-        var option_073c54ee10c4486e9dd89538215876f1 = {
+        var chart_f45e4f1e29a04a4580f14398afa78192 = echarts.init(
+            document.getElementById('f45e4f1e29a04a4580f14398afa78192'), 'dark', {renderer: 'canvas'});
+        var option_f45e4f1e29a04a4580f14398afa78192 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -21,32 +21,6 @@
     "animationDurationUpdate": 300,
     "animationEasingUpdate": "cubicOut",
     "animationDelayUpdate": 0,
-    "color": [
-        "#c23531",
-        "#2f4554",
-        "#61a0a8",
-        "#d48265",
-        "#749f83",
-        "#ca8622",
-        "#bda29a",
-        "#6e7074",
-        "#546570",
-        "#c4ccd3",
-        "#f05b72",
-        "#ef5b9c",
-        "#f47920",
-        "#905a3d",
-        "#fab27b",
-        "#2a5caa",
-        "#444693",
-        "#726930",
-        "#b2d235",
-        "#6d8346",
-        "#ac6767",
-        "#1d953f",
-        "#6950a1",
-        "#918597"
-    ],
     "series": [
         {
             "type": "map",
@@ -54,73 +28,146 @@
             "label": {
                 "show": true,
                 "position": "top",
+                "color": "#fff",
                 "margin": 8
             },
             "mapType": "china",
             "data": [
                 {
                     "name": "\u5317\u4eac\u5e02",
-                    "value": 99
+                    "value": 11263
                 },
                 {
-                    "name": "\u5c71\u4e1c\u7701",
-                    "value": 299
+                    "name": "\u5929\u6d25\u5e02",
+                    "value": 897
                 },
                 {
-                    "name": "\u6e56\u5357\u7701",
-                    "value": 299
+                    "name": "\u6cb3\u5317\u7701",
+                    "value": 1542
                 },
                 {
-                    "name": "\u4e0a\u6d77\u5e02",
-                    "value": 199
+                    "name": "\u5c71\u897f\u7701",
+                    "value": 789
                 },
                 {
-                    "name": "\u65b0\u7586\u7ef4\u543e\u5c14\u81ea\u6cbb\u533a",
-                    "value": 499
-                },
-                {
-                    "name": "\u53f0\u6e7e\u7701",
-                    "value": 299
-                },
-                {
-                    "name": "\u5357\u4eac\u5e02",
-                    "value": 199
-                },
-                {
-                    "name": "\u5e7f\u4e1c\u7701",
-                    "value": 299
-                },
-                {
-                    "name": "\u5409\u6797\u7701",
-                    "value": 399
-                },
-                {
-                    "name": "\u9ed1\u9f99\u6c5f\u7701",
-                    "value": 1299
+                    "name": "\u5185\u8499\u53e4\u81ea\u6cbb\u533a",
+                    "value": 632
                 },
                 {
                     "name": "\u8fbd\u5b81\u7701",
-                    "value": 499
+                    "value": 1105
                 },
                 {
-                    "name": "\u9752\u6d77\u7701",
-                    "value": 679
+                    "name": "\u5409\u6797\u7701",
+                    "value": 946
                 },
                 {
-                    "name": "\u897f\u85cf\u81ea\u6cbb\u533a",
-                    "value": 389
+                    "name": "\u9ed1\u9f99\u6c5f\u7701",
+                    "value": 1028
+                },
+                {
+                    "name": "\u4e0a\u6d77\u5e02",
+                    "value": 11487
+                },
+                {
+                    "name": "\u6c5f\u82cf\u7701",
+                    "value": 1356
+                },
+                {
+                    "name": "\u6d59\u6c5f\u7701",
+                    "value": 1219
+                },
+                {
+                    "name": "\u5b89\u5fbd\u7701",
+                    "value": 983
+                },
+                {
+                    "name": "\u798f\u5efa\u7701",
+                    "value": 876
+                },
+                {
+                    "name": "\u6c5f\u897f\u7701",
+                    "value": 751
+                },
+                {
+                    "name": "\u5c71\u4e1c\u7701",
+                    "value": 1422
+                },
+                {
+                    "name": "\u6cb3\u5357\u7701",
+                    "value": 1678
+                },
+                {
+                    "name": "\u6e56\u5317\u7701",
+                    "value": 63890
+                },
+                {
+                    "name": "\u6e56\u5357\u7701",
+                    "value": 11054
+                },
+                {
+                    "name": "\u5e7f\u4e1c\u7701",
+                    "value": 1765
+                },
+                {
+                    "name": "\u5e7f\u897f\u58ee\u65cf\u81ea\u6cbb\u533a",
+                    "value": 834
+                },
+                {
+                    "name": "\u6d77\u5357\u7701",
+                    "value": 421
                 },
                 {
                     "name": "\u91cd\u5e86\u5e02",
-                    "value": 589
+                    "value": 968
                 },
                 {
                     "name": "\u56db\u5ddd\u7701",
-                    "value": 389
+                    "value": 1392
+                },
+                {
+                    "name": "\u8d35\u5dde\u7701",
+                    "value": 678
                 },
                 {
                     "name": "\u4e91\u5357\u7701",
-                    "value": 89
+                    "value": 895
+                },
+                {
+                    "name": "\u897f\u85cf\u81ea\u6cbb\u533a",
+                    "value": 123
+                },
+                {
+                    "name": "\u9655\u897f\u7701",
+                    "value": 1017
+                },
+                {
+                    "name": "\u7518\u8083\u7701",
+                    "value": 724
+                },
+                {
+                    "name": "\u9752\u6d77\u7701",
+                    "value": 356
+                },
+                {
+                    "name": "\u5b81\u590f\u56de\u65cf\u81ea\u6cbb\u533a",
+                    "value": 489
+                },
+                {
+                    "name": "\u65b0\u7586\u7ef4\u543e\u5c14\u81ea\u6cbb\u533a",
+                    "value": 765
+                },
+                {
+                    "name": "\u9999\u6e2f\u7279\u522b\u884c\u653f\u533a",
+                    "value": 2143
+                },
+                {
+                    "name": "\u6fb3\u95e8\u7279\u522b\u884c\u653f\u533a",
+                    "value": 189
+                },
+                {
+                    "name": "\u53f0\u6e7e\u7701",
+                    "value": 1567
                 }
             ],
             "roam": true,
@@ -130,7 +177,31 @@
             "zoom": 1,
             "mapValueCalculation": "sum",
             "showLegendSymbol": true,
-            "emphasis": {}
+            "tooltip": {
+                "show": true,
+                "trigger": "item",
+                "triggerOn": "mousemove|click",
+                "axisPointer": {
+                    "type": "line"
+                },
+                "showContent": true,
+                "alwaysShowContent": false,
+                "showDelay": 0,
+                "hideDelay": 100,
+                "formatter": "\u7701\u4efd\uff1a{b}<br/>\u786e\u8bca\u4eba\u6570\uff1a{c}",
+                "textStyle": {
+                    "fontSize": 14
+                },
+                "borderWidth": 0,
+                "padding": 5
+            },
+            "emphasis": {},
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
+            }
         }
     ],
     "legend": [
@@ -141,7 +212,7 @@
             "selected": {
                 "\u6a21\u62df\u65b0\u51a0\u75ab\u60c5": true
             },
-            "show": true,
+            "show": false,
             "padding": 5,
             "itemGap": 10,
             "itemWidth": 25,
@@ -167,8 +238,14 @@
     },
     "title": [
         {
+            "text": "\u4e2d\u56fd\u65b0\u51a0\u75ab\u60c5\u786e\u8bca\u4eba\u6570\u70ed\u529b\u56fe",
+            "subtext": "\u6570\u636e\u4e3a\u6a21\u62df\u6570\u636e\uff0c\u4ec5\u4f5c\u53ef\u89c6\u5316\u6f14\u793a",
             "padding": 5,
-            "itemGap": 10
+            "itemGap": 10,
+            "textStyle": {
+                "color": "#fff",
+                "fontSize": 20
+            }
         }
     ],
     "visualMap": {
@@ -230,7 +307,7 @@
         ]
     }
 };
-        chart_073c54ee10c4486e9dd89538215876f1.setOption(option_073c54ee10c4486e9dd89538215876f1);
+        chart_f45e4f1e29a04a4580f14398afa78192.setOption(option_f45e4f1e29a04a4580f14398afa78192);
     </script>
 </body>
 </html>
